p2p/core-engine/src/core/bindings.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasNoiseState"][::std::mem::size_of::<ForetiasNoiseState>() - 328usize];
    ["Alignment of ForetiasNoiseState"][::std::mem::align_of::<ForetiasNoiseState>() - 8usize];
    ["Offset of field: ForetiasNoiseState::chaining_key"]
        [::std::mem::offset_of!(ForetiasNoiseState, chaining_key) - 0usize];
    ["Offset of field: ForetiasNoiseState::handshake_hash"]
        [::std::mem::offset_of!(ForetiasNoiseState, handshake_hash) - 32usize];
    ["Offset of field: ForetiasNoiseState::local_static_priv"]
        [::std::mem::offset_of!(ForetiasNoiseState, local_static_priv) - 64usize];
    ["Offset of field: ForetiasNoiseState::local_static_pub"]
        [::std::mem::offset_of!(ForetiasNoiseState, local_static_pub) - 96usize];
    ["Offset of field: ForetiasNoiseState::local_ephemeral"]
        [::std::mem::offset_of!(ForetiasNoiseState, local_ephemeral) - 128usize];
    ["Offset of field: ForetiasNoiseState::remote_ephemeral"]
        [::std::mem::offset_of!(ForetiasNoiseState, remote_ephemeral) - 160usize];
    ["Offset of field: ForetiasNoiseState::remote_static"]
        [::std::mem::offset_of!(ForetiasNoiseState, remote_static) - 192usize];
    ["Offset of field: ForetiasNoiseState::send_key"]
        [::std::mem::offset_of!(ForetiasNoiseState, send_key) - 224usize];
    ["Offset of field: ForetiasNoiseState::recv_key"]
        [::std::mem::offset_of!(ForetiasNoiseState, recv_key) - 256usize];
    ["Offset of field: ForetiasNoiseState::send_nonce"]
        [::std::mem::offset_of!(ForetiasNoiseState, send_nonce) - 288usize];
    ["Offset of field: ForetiasNoiseState::recv_nonce"]
        [::std::mem::offset_of!(ForetiasNoiseState, recv_nonce) - 296usize];
    ["Offset of field: ForetiasNoiseState::step"]
        [::std::mem::offset_of!(ForetiasNoiseState, step) - 304usize];
    ["Offset of field: ForetiasNoiseState::is_initiator"]
        [::std::mem::offset_of!(ForetiasNoiseState, is_initiator) - 308usize];
    ["Offset of field: ForetiasNoiseState::handshake_complete"]
        [::std::mem::offset_of!(ForetiasNoiseState, handshake_complete) - 312usize];
    ["Offset of field: ForetiasNoiseState::curve"]
        [::std::mem::offset_of!(ForetiasNoiseState, curve) - 316usize];
    ["Offset of field: ForetiasNoiseState::_pad"]
        [::std::mem::offset_of!(ForetiasNoiseState, _pad) - 320usize];
};
extern "C" {
    #[link_name = "foretias_noise_init_ed25519"]
    pub fn foretias_noise_init_ed25519(        state: *mut ForetiasNoiseState,        my_static_priv: *const ForetiasPrivKey32,        their_static_pub: *const ForetiasPubKey32,        is_initiator: bool,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_noise_init_p256"]
    pub fn foretias_noise_init_p256(        state: *mut ForetiasNoiseState,        my_static_priv: *const ForetiasPrivKey32,        their_static_pub: *const ForetiasPubKey33,        is_initiator: bool,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_noise_step"]
    pub fn foretias_noise_step(        state: *mut ForetiasNoiseState,        input: *const u8,        input_len: usize,        output: *mut u8,        output_len: *mut usize,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_noise_send"]
    pub fn foretias_noise_send(        state: *mut ForetiasNoiseState,        plaintext: *const u8,        pt_len: usize,        ciphertext: *mut u8,        ct_len: *mut usize,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_noise_recv"]
    pub fn foretias_noise_recv(        state: *mut ForetiasNoiseState,        ciphertext: *const u8,        ct_len: usize,        plaintext: *mut u8,        pt_len: *mut usize,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_noise_destroy"]
    pub fn foretias_noise_destroy(state: *mut ForetiasNoiseState);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasMerkleProof {
    pub siblings: [ForetiasHash32; 32usize],
    pub directions: [u8; 32usize],
    pub depth: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasMerkleProof"][::std::mem::size_of::<ForetiasMerkleProof>() - 1060usize];
    ["Alignment of ForetiasMerkleProof"][::std::mem::align_of::<ForetiasMerkleProof>() - 4usize];
    ["Offset of field: ForetiasMerkleProof::siblings"]
        [::std::mem::offset_of!(ForetiasMerkleProof, siblings) - 0usize];
    ["Offset of field: ForetiasMerkleProof::directions"]
        [::std::mem::offset_of!(ForetiasMerkleProof, directions) - 1024usize];
    ["Offset of field: ForetiasMerkleProof::depth"]
        [::std::mem::offset_of!(ForetiasMerkleProof, depth) - 1056usize];
};
extern "C" {
    #[link_name = "foretias_merkle_leaf"]
    pub fn foretias_merkle_leaf(        data: *const u8,        len: usize,        leaf_out: *mut ForetiasHash32,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_merkle_verify"]
    pub fn foretias_merkle_verify(        root: *const ForetiasHash32,        leaf: *const ForetiasHash32,        proof: *const ForetiasMerkleProof,    ) -> ForetiasResult;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasFrostRound1 {
    pub nonce_d: [u8; 32usize],
    pub nonce_e: [u8; 32usize],
    pub commit_D: [u8; 32usize],
    pub commit_E: [u8; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ForetiasFrostRound1"][::std::mem::size_of::<ForetiasFrostRound1>() - 128usize];
    ["Alignment of ForetiasFrostRound1"][::std::mem::align_of::<ForetiasFrostRound1>() - 1usize];
    ["Offset of field: ForetiasFrostRound1::nonce_d"]
        [::std::mem::offset_of!(ForetiasFrostRound1, nonce_d) - 0usize];
    ["Offset of field: ForetiasFrostRound1::nonce_e"]
        [::std::mem::offset_of!(ForetiasFrostRound1, nonce_e) - 32usize];
    ["Offset of field: ForetiasFrostRound1::commit_D"]
        [::std::mem::offset_of!(ForetiasFrostRound1, commit_D) - 64usize];
    ["Offset of field: ForetiasFrostRound1::commit_E"]
        [::std::mem::offset_of!(ForetiasFrostRound1, commit_E) - 96usize];
};
extern "C" {
    #[link_name = "foretias_frost_round1"]
    pub fn foretias_frost_round1(out: *mut ForetiasFrostRound1) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_frost_sign_share"]
    pub fn foretias_frost_sign_share(        my_state: *const ForetiasFrostRound1,        my_key_share: *const ForetiasFrostShare,        msg: *const u8,        msg_len: usize,        all_commits: *const u8,        n_signers: usize,        my_index: i32,        sig_share_out: *mut ForetiasFrostShare,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_frost_aggregate"]
    pub fn foretias_frost_aggregate(        shares: *const ForetiasFrostShare,        indices: *const i32,        k: usize,        all_commits: *const u8,        msg: *const u8,        msg_len: usize,        sig_out: *mut ForetiasSig64,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_frost_destroy_round1"]
    pub fn foretias_frost_destroy_round1(state: *mut ForetiasFrostRound1);
}
extern "C" {
    #[link_name = "foretias_nullifier_derive"]
    pub fn foretias_nullifier_derive(        priv_: *const ForetiasPrivKey32,        context: *const u8,        context_len: usize,        out: *mut ForetiasNullifier,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_rng_bytes"]
    pub fn foretias_rng_bytes(buf: *mut u8, len: usize) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_memzero"]
    pub fn foretias_memzero(ptr: *mut ::std::os::raw::c_void, len: usize);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ForetiasPrivKey {
    _unused: [u8; 0],
}
extern "C" {
    #[link_name = "foretias_privkey_init"]
    pub fn foretias_privkey_init();
}
extern "C" {
    #[link_name = "foretias_privkey_cleanup"]
    pub fn foretias_privkey_cleanup();
}
extern "C" {
    #[link_name = "foretias_privkey_ed25519_generate"]
    pub fn foretias_privkey_ed25519_generate() -> *mut ForetiasPrivKey;
}
extern "C" {
    #[link_name = "foretias_privkey_ed25519_from_seed"]
    pub fn foretias_privkey_ed25519_from_seed(seed: *const u8) -> *mut ForetiasPrivKey;
}
extern "C" {
    #[link_name = "foretias_privkey_ed25519_public"]
    pub fn foretias_privkey_ed25519_public(key: *const ForetiasPrivKey, out: *mut u8) -> *mut u8;
}
extern "C" {
    #[link_name = "foretias_privkey_ed25519_sign"]
    pub fn foretias_privkey_ed25519_sign(        key: *const ForetiasPrivKey,        msg: *const u8,        msg_len: usize,        sig: *mut u8,    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "foretias_nullifier_derive_handle"]
    pub fn foretias_nullifier_derive_handle(        key: *const ForetiasPrivKey,        context: *const u8,        context_len: usize,        out: *mut ForetiasNullifier,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_privkey_derive_seal_key"]
    pub fn foretias_privkey_derive_seal_key(        key: *const ForetiasPrivKey,        info: *const u8,        info_len: usize,        seal_key: *mut u8,    ) -> ForetiasResult;
}
extern "C" {
    #[link_name = "foretias_privkey_free"]
    pub fn foretias_privkey_free(key: *mut ForetiasPrivKey);
}